--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/index.js",
+    "lint": "eslint src --fix --ext .js"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +17,7 @@
     "pg": "^8.11.3"
   },
   "devDependencies": {
+    "eslint": "^8.49.0",
     "nodemon": "^3.0.1"
   }
 }
