--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,5 @@
 DB_HOST=localhost
-DB_PORT=5432
-DB_USER=contacts
-DB_PASS=contacts
+DB_PORT=5431
+DB_USER=docker
+DB_PASS=docker
 DB_NAME=contacts
-
